# DesafioBackEnd_Lacrei-Saude

./: Dockerfile  README.md  pyproject.toml  requirements.txt  seed_db.py
appointments/: admin.py  api.py  models.py  serializers.py
appointments/migrations/: 0002_alter_appointment_unique_together.py
core/: errormessage.py  permissions.py  settings.py  urls.py  utils.py
core/api/: professionals.py  routers.py  users.py
djangoapp/: requirements.txt  seed_db.py
djangoapp/appointments/: api.py
djangoapp/appointments/migrations/: 0001_initial.py
djangoapp/core/: errormessage.py  permissions.py  settings.py  urls.py  utils.py
djangoapp/core/api/: appointments.py  professionals.py  routers.py
djangoapp/integrationsystem/external_apis/: zipcode.py
djangoapp/professionals/: api.py  models.py  serializers.py  validator.py
djangoapp/professionals/migrations/: 0003_alter_healthprofessional_profession.py  0004_healthprofessional_adress_number_and_more.py  0006_healthprofessional_creation_user_id_and_more.py  0007_alter_healthprofessional_taxnumber.py
djangoapp/users/: api.py  tests.py
dotenv_files/: .env-example
integrationsystem/: apps.py
integrationsystem/external_apis/: zipcode.py
professionals/: admin.py  api.py  models.py  serializers.py  tests.py  validator.py  views.py
professionals/migrations/: 0001_initial.py  0002_profession_alter_healthprofessional_table_and_more.py  0005_alter_healthprofessional_taxnumber.py
scripts/: commands.sh
users/: api.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
